fix visibility bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,5 +44,5 @@ button {
 }
 
 #results {
-    /* visibility: hidden; */
+    visibility: hidden;
 }
